k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-svc
  namespace: fastapi-app
  labels:
    app.kubernetes.io/name: fastapi-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: fastapi-app
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
